--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ ariadne-graphql-modules==0.8.0
 asyncpg==0.30.0
 dotenv~=0.9.9
 httpx==0.28.1
+PyJWT==2.10.1
 starlette==0.46.1
 tortoise-orm==0.25.0
 uvicorn==0.34.0
